@@ -1,10 +1,64 @@
 package common;
 
+import WIP.arcadeflex.libc_v2.UBytePtr;
+
 /**
  *
  * @author shadow
  */
 public class ptr {
+
+    /**
+     * BytePtr emulation
+     */
+    public static class BytePtr {
+
+        public int bsize = 1;
+        public byte[] memory;
+        public int offset;
+
+        public BytePtr() {
+        }
+
+        public BytePtr(int size) {
+            memory = new byte[size];
+            offset = 0;
+        }
+
+        public BytePtr(byte[] m) {
+            set(m, 0);
+        }
+
+        public BytePtr(BytePtr cp, int b) {
+            set(cp.memory, cp.offset + b);
+        }
+
+        public BytePtr(UBytePtr cp) {
+            memory = new byte[cp.memory.length];
+            for (int i = 0; i < cp.memory.length; i++) {
+                memory[i] = (byte) cp.memory[i];
+            }
+            offset = cp.offset;
+        }
+
+        public void set(byte[] m) {
+            memory = m;
+            offset = 0;
+        }
+
+        public void set(byte[] m, int offs) {
+            memory = m;
+            offset = offs;
+        }
+
+        public byte read() {
+            return (memory[offset]);
+        }
+
+        public byte read(int index) {
+            return (memory[offset + index]);
+        }
+    }
 
     /**
      * ShortPtr emulation
